atualização finalização projeto

--- a/coracao.html
+++ b/coracao.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>Coracao</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/insta italo.png" alt="Instagram">
-    <a href="https://www.instagram.com/italofalasca/" target="_blank">ACESSE</a>
+    <img src="imagens/insta ana.png" alt="Twitter">
+    <a href="https://www.instagram.com/anacarolinamanosso/" target="_blank">ACESSE</a>
 </body>
 </html>
