--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">ACESSE</a>
+    <img src="imagens/facebook italo.png" alt="Facebook">
+    <a href="https://www.facebook.com/italofalasca" target="_blank">ACESSE</a>
 </body>
 </html>
