--- a/youtube.html
+++ b/youtube.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://www.youtube.com/@CursoemVideo" target="_blank">ACESSE</a>
+    <img src="imagens/youtube italo.png" alt="Youtube">
+    <a href="https://www.youtube.com/channel/UCYHdMNAM3lhLWFmrU_30igw" target="_blank">ACESSE</a>
 </body>
 </html>
