--- a/coracao.html
+++ b/coracao.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/insta ana.png" alt="Twitter">
-    <a href="https://www.instagram.com/anacarolinamanosso/" target="_blank">ACESSE</a>
+    <a href="namoro.html" target="_blank">ACESSE</a>
 </body>
 </html>
