--- a/coracao.html
+++ b/coracao.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/insta ana.png" alt="Twitter">
+    <img src="imagens/insta ana.png" alt="Insta">
     <a href="namoro.html" target="_blank">ACESSE</a>
 </body>
 </html>
